--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to Webpack Practice</title>
+    <link rel="stylesheet" href="dist/styles.css">
   </head>
   <body>
     <p>Hello and Welcome to webpack practice.</p>
